<resources>
    <string name="app_name">ShoppingList</string>
    <string name="menu_title">Shopping List!</string>
    <string name="view_list">View Lists!</string>
    <string name="remove_list">Remove List!</string>
    <string name="add_list">Add List!</string>
    <string name="title_activity_create_list">CreateListActivity</string>
    <string name="submit">Submit</string>
    <string name="add_list_hint">Enter your new list name here</string>
    <string name="add_new_list">Add a New List!</string>
    <string name="add_new_item">Add your item and price!</string>
    <string name="add_item_hint">Item name here</string>
    <string name="add_price_hint">Item the item\'s price</string>
    <string name="add_item_btn">Add item</string>
    <string name="add_list_btn">Add new list</string>
</resources>
