<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:id="@+id/frame_container_2"
    tools:context=".ui.mainmenu.MenuActivity">

    <Button
        android:id="@+id/remove_list"
        android:layout_width="260dp"
        android:layout_height="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="152dp"
        android:background="#FFFFFF"
        android:text="@string/remove_list"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_list" />

    <Button
        android:id="@+id/new_list"
        android:layout_width="260dp"
        android:layout_height="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:text="@string/add_list"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/remove_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_lists" />

    <TextView
        android:id="@+id/menu_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/menu_title"
        android:textColor="#000000"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/view_lists"
        android:layout_width="260dp"
        android:layout_height="84dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:drawableBottom="@color/colorAccent"
        android:text="@string/view_list"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/new_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_screen" />

<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:id="@+id/frag_layout" />-->

<!--    <FrameLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--       android:id="@+id/frame_container_2"&ndash;&gt;-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>